# tpixel

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: env_codon_aligned.fasta  env_protein_aligned.fasta
src/tpixel/: __init__.py  _version.py  cli.py  fasta.py  hiv.py  hxb2.py  models.py  pngs.py  renderer.py
tests/: conftest.py  test_cli.py  test_render.py
